# feroxide

./: .codeclimate.yml  .gitattributes  .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  clippy.sh  convertrstotoml.sh  generate_docs.sh  loc.sh  precommit.sh  testfile
docs/: AtomGroup.t.html  AtomMass.t.html  IonCharge.t.html  Mass.t.html  MoleculeCompound.t.html  Moles.t.html  Properties.t.html  RedoxReaction.t.html  build.sh  build_background.sh  fn.charge_of_atom.html  fn.gcd.html  fn.ion_superscript.html  fn.number_to_greek.html  fn.subscript.html  fn.superscript.html  index.html  ion_from_molecule.m.html  ion_superscript.v.html  is_letter.m.html  is_lower.m.html  is_whitespace.m.html  macro.ion_from_atom.html  macro.ion_from_molecule.html  macro.is_lower.html  macro.is_upper!.html  macro.is_upper.html  macro.is_vowel.html  macro.is_whitespace.html  macro.molecule_from_atom.html  macro.to_number.html  search-index.js  sidebar-items.js  string_representation.tex  struct.Atom.html  struct.Container.html  struct.ELECTRON.html  struct.MoleculeCompound.html  to_number.m.html  trait.Element.html  (+3 more)
docs/atom/: struct.Atom.html
docs/container/: fn.rc_to_cc.html  struct.Container.html  struct.ContainerCompound.html
docs/data_atoms/: ALUMINIUM.v.html  ARSENIC.v.html  BERYLLIUM.v.html  BROMINE.v.html  CAESIUM.v.html  CALCIUM.v.html  CARBON.v.html  FRANCIUM.v.html  HYDROGEN.v.html  IODINE.v.html  IRON.v.html  LEAD.v.html  LITHIUM.v.html  MAGNESIUM.v.html  NEON.v.html  NICKEL.v.html  NITROGEN.v.html  OXYGEN.v.html  PLATINUM.v.html  POTASSIUM.v.html  RUBIDIUM.v.html  SELENIUM.v.html  SILICON.v.html  TIN.v.html  VANADIUM.v.html  XENON.v.html  ZINC.v.html  constant.ALL_ATOMS.html  (+45 more)
rust-docs/: aliases.js  search-index.js
src/: .gitignore  atom.rs  atoms.rs  atoms.toml  build.rs  container.rs  containers.rs  data_atoms.rs  data_atoms.toml  data_electron.rs  data_ions.rs  data_molecules.rs  data_sef.rs  data_sep.rs  display_impls.rs  electron.rs  element.rs  ion.rs  ions.rs  lib.rs  main.rs  math.rs  molecule.rs  molecules.rs  namings.rs  parse_macros.rs  periodic_elements.json  properties.rs  reaction.rs  redox.rs  trait_element.rs  trait_properties.rs  trait_reaction.rs  types.rs
(+533 files in other folders)
