[package]
name = "feroxide"
version = "1.2.0"
authors = ["feroxide"]
build = "src/build.rs"

description = "A basic chemistry simulator"
documentation = "https://feroxide.github.io/feroxide/docs"
homepage = "https://feroxide.github.io/feroxide/"
repository = "https://github.com/feroxide/feroxide"

readme = "README.md"

keywords = ["chemistry", "simulator", "mit"]
categories = ["command-line-interface", "science"]

license-file = "LICENSE"

[badges]
travis-ci = { repository = "feroxide/feroxide", branch = "master" }


[[bin]]
name = "main"
doc = false


[dependencies]
lazy_static = "0.2.4"


[build-dependencies]
toml = "0.3.1"
serde = "0.9.11"
serde_derive = "0.9.11"
